cmake_minimum_required(VERSION 3.20)
project(MyProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyProject
        main26a1.cpp
        TechSystem26a1.cpp
        TechSystem26a1.h
        wet1util.h
        student.cpp
        student.h
        course.cpp
        course.h
        NodeStdInCourse.cpp
        NodeStdInCourse.h
        AvlTree.h
)
